[package]
name = "consensus_on_demand"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = "0.43.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0.85"
chrono = "0.4"
sha2 = "0.9.8"
hex = "0.4"
crossbeam-channel = "0.5.6"
structopt = "0.3"
tide = "0.16"